Front responsivo a pantallas pequeñas en login e inicio

--- a/Control-De-stock-FE/src/app/pages/inicio/inicio.html
+++ b/Control-De-stock-FE/src/app/pages/inicio/inicio.html
@@ -1,15 +1,17 @@
 <div class="barraSuperior"></div>
 <div>
-  <img src="imagenes/casa.png" />
+  <img src="imagenes/changuito2.png" />
   <h1>Menú</h1>
-  <button routerLink="/registrarProducto">Registrar Producto</button>
-  <button routerLink="/registrarIngresoDeProducto">
+  <button type="button" routerLink="/registrarProducto">
+    Registrar Producto
+  </button>
+  <button type="button" routerLink="/registrarIngresoDeProducto">
     Registrar Ingreso de Productos
   </button>
-  <button routerLink="/registrarSalidaDeProducto">
+  <button type="button" routerLink="/registrarSalidaDeProducto">
     Registrar Salida de Productos
   </button>
-  <button routerLink="/inventario">Inventario</button>
-  <button routerLink="/proveedores">Proveedores</button>
-  <button routerLink="/pedidos">Pedidos</button>
+  <button type="button" routerLink="/inventario">Inventario</button>
+  <button type="button" routerLink="/proveedores">Proveedores</button>
+  <button type="button" routerLink="/pedidos">Pedidos</button>
 </div>
