--- a/Control-De-stock-FE/src/app/pages/inventario/inventario.css
+++ b/Control-De-stock-FE/src/app/pages/inventario/inventario.css
@@ -41,6 +41,7 @@ thead {
 }
 .divBotones{
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 25px;
     margin-top: 20px;
@@ -48,7 +49,6 @@ thead {
 
 button {
     font-family: 'Ubuntu', sans-serif;
-    margin: auto;
     width: 160px;
     height: 40px;
     background-color: #FF9E01;
