--- a/Control-De-stock-FE/src/app/pages/login/login.html
+++ b/Control-De-stock-FE/src/app/pages/login/login.html
@@ -1,15 +1,15 @@
 <div class="barraSuperior"></div>
-<div class="login">
+<form class="login">
   <h1>Iniciar Sesión</h1>
   <label for="Email">Email</label>
   <input type="text" id="Email" required placeholder="Ingrese su email" />
   <label for="Contraseña">Contraseña</label>
   <input
     type="password"
-    id="Contraseña"
+    name="Contraseña"
     required
     placeholder="Ingrese su contraseña"
   />
-  <input type="submit" value="Ingresar" />
-</div>
+  <button type="submit">Ingresar</button>
+</form>
 <img src="imagenes/changuito.png" />
