--- a/Control-De-stock-FE/src/app/pages/inicio/inicio.css
+++ b/Control-De-stock-FE/src/app/pages/inicio/inicio.css
@@ -4,6 +4,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+/* Botones de navegacion */
 div {
     text-align: center;
 }
@@ -33,4 +34,11 @@ h1 {
     color: #000000;
     margin: auto;
     margin-bottom: 50px;
+}
+
+/* Adaptacion a telefono */
+@media screen and (max-width: 600px) {
+    img{
+        margin-top: 35%;
+    }
 }
