--- a/Control-De-stock-FE/src/app/pages/login/login.css
+++ b/Control-De-stock-FE/src/app/pages/login/login.css
@@ -8,9 +8,10 @@
 .login {
     position: relative;
     z-index: 2;
-    width: 400px;
+    width: 90%;
+    max-width: 400px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 6%;
 }
 
 h1 {
@@ -24,36 +25,37 @@ label {
     font-size: 15px;
     color: #000000;
     margin: auto;
-    margin-left: 40px;
+    margin-left: 11%;
     width: 80%;
 }
 
 input[type="text"],
 input[type="password"] {
+    font-size: 15px;;
     display: block;
     width: 80%;
-    padding: 10px;
+    padding: 3%;
     margin: auto;
-    margin-bottom: 15px;
-    margin-top: 10px;
+    margin-bottom: 6%;
+    margin-top: 4%;
     border: none;
     background-color: #fff;
     border-radius: 6px;
     box-sizing: border-box;
 }
 
-input[type="submit"] {
+button[type="submit"] {
     background-color: #FF9E01;
     color: white;
-    font-size: 16px;
+    font-size: 17px;
     font-weight: bold;
     border: none;
     border-radius: 6px;
-    padding: 10px;
+    padding: 3%;
     width: 40%;
     display: block;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 10%;
     cursor: pointer;
 }
 
@@ -66,4 +68,22 @@ img {
     width: 56.6%;
     height: auto;
     z-index: 1;
+}
+
+/* adaptacion para telefonos */
+@media screen and (max-width: 600px){
+    h1{
+        margin-top: 30%;
+    }
+
+    img{
+        position: absolute;
+        bottom: 0;
+        left: 35%;
+        top: 73%;
+        transform: translateX(-50%);
+        width: 100%;
+        height: auto;
+        z-index: 1;
+    }
 }
