--- a/Control-De-stock-FE/src/app/pages/registrar-producto/registrar-producto.css
+++ b/Control-De-stock-FE/src/app/pages/registrar-producto/registrar-producto.css
@@ -87,7 +87,6 @@ input[type="text"], input[type="email"] {
     justify-content: center;
     gap: 70px;
     text-align: center;
-    margin: auto;
     margin-top: 110px;
 }
 
@@ -150,4 +149,10 @@ h2 {
 
 .modal.proveedor {
     margin-top: -70px;
+}
+
+.modal.producto {
+    display: flex;
+    flex-direction: row;
+    width: 800px;
 }
