Arreglos de codigo y responsividad

--- a/Control-De-stock-FE/src/app/pages/inicio/inicio.html
+++ b/Control-De-stock-FE/src/app/pages/inicio/inicio.html
@@ -1,6 +1,6 @@
 <div class="barraSuperior"></div>
 <div>
-  <img src="imagenes/changuito2.png" />
+  <img src="imagenes/changuito2.png" alt="Icono de menú" />
   <h1>Menú</h1>
   <button type="button" routerLink="/registrarProducto">
     Registrar Producto
