--- a/Control-De-stock-FE/src/app/pages/inventario/inventario.html
+++ b/Control-De-stock-FE/src/app/pages/inventario/inventario.html
@@ -6,7 +6,7 @@
   />
 </div>
 <h1>Inventario</h1>
-<div class="tabla">
+<div class="divTabla">
   <table class="Inventario">
     <thead>
       <th>Codigo</th>
@@ -17,9 +17,29 @@
       <th>Stock Minimo</th>
       <th>Proveedor</th>
     </thead>
+    <tbody>
+      <tr>
+        <td>11111</td>
+        <td>Coca Cola</td>
+        <td>Bebida</td>
+        <td>Coca cola 1L original</td>
+        <td>25</td>
+        <td>10</td>
+        <td>Coca Cola</td>
+      </tr>
+      <tr>
+        <td>222222</td>
+        <td>Oreo</td>
+        <td>Masitas</td>
+        <td>Oreo 120grs</td>
+        <td>17</td>
+        <td>5</td>
+        <td>Arcor</td>
+      </tr>
+    </tbody>
   </table>
 </div>
 <div class="divBotones">
-  <button routerLink="/inicio">Volver</button>
-  <button routerLink="/registrarProducto">Registrar</button>
+  <button type="button" routerLink="/inicio">Volver</button>
+  <button type="button" routerLink="/registrarProducto">Registrar</button>
 </div>
