--- a/Control-De-stock-FE/src/app/pages/inventario/inventario.css
+++ b/Control-De-stock-FE/src/app/pages/inventario/inventario.css
@@ -21,24 +21,36 @@ h1 {
 }
 
 /* div para tabla de productos */
-.tabla {
-    margin-top: 10%;
+.divTabla {
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+/* tabla de productos */
 table{
     background-color: #FFFFFF;
-}
-
-thead {
     width: 90%;
-    background-color: #FF9E01;
-    color: #FFFFFF;
+    border-collapse: collapse;
+    font-size: 18px;
     border-radius: 6px;
 }
+
+/* Encabezado */
+th {
+    background-color: #FF9E01;
+    color: #FFFFFF;
+    border: #9a9a9a 2px solid;
+}
+
+/* Filas y columnas */
+tr,
+td {
+    border: #9a9a9a 2px solid;
+}
+
 .divBotones{
     display: flex;
     justify-content: center;
