--- a/Control-De-stock-FE/src/app/pages/login/login.css
+++ b/Control-De-stock-FE/src/app/pages/login/login.css
@@ -29,7 +29,7 @@ label {
     width: 80%;
 }
 
-input[type="text"],
+input[type="email"],
 input[type="password"] {
     font-size: 15px;;
     display: block;
