--- a/Control-De-stock-FE/src/app/pages/login/login.html
+++ b/Control-De-stock-FE/src/app/pages/login/login.html
@@ -2,14 +2,15 @@
 <form class="login">
   <h1>Iniciar Sesión</h1>
   <label for="Email">Email</label>
-  <input type="text" id="Email" required placeholder="Ingrese su email" />
+  <input type="email" id="Email" required placeholder="Ingrese su email" />
   <label for="Contraseña">Contraseña</label>
   <input
     type="password"
     name="Contraseña"
+    id="Contraseña"
     required
     placeholder="Ingrese su contraseña"
   />
   <button type="submit">Ingresar</button>
 </form>
-<img src="imagenes/changuito.png" />
+<img src="imagenes/changuito.png" alt="Icono de login" />
