--- a/Control-De-stock-FE/src/app/pages/proveedores/proveedores.css
+++ b/Control-De-stock-FE/src/app/pages/proveedores/proveedores.css
@@ -21,23 +21,33 @@ h1 {
 }
 
 /* div para tabla de proveedores */
-.tabla {
-    margin-top: 10%;
+.divTabla {
+    margin-top: 5%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+/* tabla de proveedores */
 table {
     background-color: #FFFFFF;
+    width: 90%;
+    border-collapse: collapse;
+    font-size: 18px;
+    border-radius: 6px;
 }
 
+/* Encabezado */
 th {
-    width: 90%;
     background-color: #FF9E01;
     color: #FFFFFF;
-    border-radius: 6px;
+    border: #9a9a9a 2px solid;
+}
+
+/* Filas y columnas */
+tr, td {
+    border: #9a9a9a 2px solid;
 }
 
 .divBotones {
