Login completo listo

--- a/Control-De-stock-FE/src/app/pages/login/login.css
+++ b/Control-De-stock-FE/src/app/pages/login/login.css
@@ -70,6 +70,13 @@ img {
     z-index: 1;
 }
 
+/* Estilo para mensajes de error */
+.error-message {
+    color: red;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 /* adaptacion para telefonos */
 @media screen and (max-width: 600px){
     h1{
