Conexion registro de producto

--- a/Control-De-stock-FE/src/app/pages/inicio/inicio.html
+++ b/Control-De-stock-FE/src/app/pages/inicio/inicio.html
@@ -2,6 +2,7 @@
 <div>
   <img src="imagenes/changuito2.png" alt="Icono de menú" />
   <h1>Menú</h1>
+  <button type="button" routerLink="/venta">Registrar Venta</button>
   <button type="button" routerLink="/registrarProducto">
     Registrar Producto
   </button>
