--- a/Control-De-stock-FE/src/app/pages/registrar-producto/registrar-producto.css
+++ b/Control-De-stock-FE/src/app/pages/registrar-producto/registrar-producto.css
@@ -30,7 +30,8 @@ h1 {
     width: 100%;
     margin-top: 70px;
     flex-wrap: wrap;
-    gap: 150px;
+    column-gap: 150px;
+    row-gap: 75px;
 }
 
 /*textos e inputs del formulario*/
@@ -50,13 +51,22 @@ select {
     font-size: 16px;
 }
 
-input[type="text"], input[type="email"] {
+input[type="text"],
+input[type="email"],
+input[type="number"] {
     width: 240px;
     height: 30px;
     border-radius: 6px;
     border: none;
     padding: 5px;
     font-size: 16px;
+}
+
+/* Saca flechitas del imput number */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Botones "+" para registrar marca y proveedor*/
@@ -74,11 +84,11 @@ input[type="text"], input[type="email"] {
 
 /*Div Botones de envio*/
 .divBotones {
+    width: 100%;
     display: flex;
     justify-content: center;
     gap: 70px;
     text-align: center;
-    margin-top: 110px;
 }
 
 /*Botónes de cancelar y guardar*/
@@ -94,6 +104,11 @@ input[type="text"], input[type="email"] {
     cursor: pointer;
 }
 
+.botonGrande:disabled {
+    background-color: #efbb69;
+    cursor: not-allowed;
+}
+
 /* Div para registro de marca y proveedor*/
 .overlay {
     position: fixed;
@@ -104,8 +119,7 @@ input[type="text"], input[type="email"] {
     background: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    padding-top: 100px;
+    align-items: center;
     z-index: 2000;
 }
 
@@ -117,6 +131,8 @@ input[type="text"], input[type="email"] {
     border-radius: 10px;
     text-align: center;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    max-height: 90vh;
+    overflow-y: auto;
 }
 
 /* Titulo registro marca/proveedor */
@@ -124,34 +140,32 @@ h2 {
     margin-bottom: 10%;
 }
 
-/*Div con componentes del proveedor*/
-.modal.proveedor {
-    margin-top: -70px;
-}
-
 /*Div botones cerrar y registrar marca/proveedor*/
-.divBotonesRegistroMP{
+.divBotonesRegistroMP {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 15px;
-    margin-top: 25px;;
+    margin-top: 25px;
+    ;
 }
 
 @media screen and (max-width: 837px) {
     .formRegistro {
         flex-direction: column;
         align-items: center;
-        margin-top:8%;
+        margin-top: 8%;
         gap: 0px;
-    }
-
-    .overlay {
-        padding-top: 55%;
     }
 
     .modal {
         width: 80%;
     }
-    
+
+    .divBotones {
+        justify-content: center;
+        margin-top: 10%;
+        gap: 40px;
+    }
+
 }
