Actualizacion de diagrmas y partes de la conexion

--- a/Control-De-stock-FE/src/app/pages/inicio/inicio.html
+++ b/Control-De-stock-FE/src/app/pages/inicio/inicio.html
@@ -1,4 +1,6 @@
-<div class="barraSuperior"></div>
+<div class="barraSuperior">
+  <i class="bi bi-bell-fill"></i>
+</div>
 <div>
   <img src="imagenes/changuito2.png" alt="Icono de menú" />
   <h1>Menú</h1>
