--- a/Control-De-stock-FE/src/app/pages/inicio/inicio.css
+++ b/Control-De-stock-FE/src/app/pages/inicio/inicio.css
@@ -4,6 +4,13 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
+.barraSuperior i {
+    color: #ececec;
+    font-size: 23px;
+    line-height: 60px;
+    margin-left: 95%;
+}
+
 /* Botones de navegacion */
 div {
     text-align: center;
@@ -38,7 +45,11 @@ button {
 
 /* Adaptacion a telefono */
 @media screen and (max-width: 600px) {
-    img{
+    img {
         margin-top: 35%;
+    }
+
+    .barraSuperior i {
+        margin-left: 75%;
     }
 }
