--- a/Control-De-stock-FE/src/app/pages/registrar-salida-producto/registrar-salida-producto.html
+++ b/Control-De-stock-FE/src/app/pages/registrar-salida-producto/registrar-salida-producto.html
@@ -1,21 +1,12 @@
 <div class="barraSuperior">
-  <img
-    src="imagenes/CasaBarra.png"
-    alt="Ir a la página de inicio"
-    routerLink="/inicio"
-  />
+  <img src="imagenes/CasaBarra.png" alt="Ir a la página de inicio" routerLink="/inicio" />
 </div>
 
 <h1>Salida de Producto</h1>
 <form class="formBusquedaProducto">
   <div class="divCodigoBusqueda">
     <label for="CodigoDeBarra">Código de Barras</label>
-    <input
-      type="number"
-      id="CodigoDeBarra"
-      placeholder="Ingrese el código"
-      class="codigoBusqueda"
-    />
+    <input type="number" id="CodigoDeBarra" placeholder="Ingrese el código" class="codigoBusqueda" />
   </div>
   <div class="divBoton">
     <button type="submit" class="botonChico">Buscar</button>
@@ -62,6 +53,17 @@
     <th>Proveedor</th>
   </thead>
 </table>
+
+<div class="SelectorDescripcion">
+  <label for="descripcion">Motivo de la salida</label>
+  <select name="descripicion" id="descripcion" placeholder="Seleccione el motivo de salida">
+    <option value="Seleccione una opcion">Seleccione una opcion</option>
+    <option value="Consumo Propio">Consumo Propio</option>
+    <option value="Producto Vencido">Producto Vencido</option>
+    <option value="Donacion">Donacion</option>
+    <option value="Otro">Otro</option>
+  </select>
+</div>
 
 <div class="divBotones">
   <button routerLink="/inicio">Cancelar</button>
